
cc_library(
    name = "log", 
    hdrs = [
        "public/log.h",
    ],
    includes = ["public"],
)


cc_library(
    name = "i2c",
    hdrs = [
        "public/i2c.h",
    ],
    deps = [
        "@pico-sdk//src/rp2_common/hardware_i2c",
    ],
    includes = ["public"],
)

cc_library(
    name = "petal_matrix",
    hdrs = [
        "public/petal_matrix.h",
    ],
    deps = [
        ":log",
        ":i2c",
    ],
    includes = ["public"],
)

cc_library(
    name = "touch_wheel",
    hdrs = [
        "public/touch_wheel.h",
    ],
    deps = [
        ":i2c",
    ],
    includes = ["public"],
)

cc_binary(
    name = "main",
    includes = ["public"],
    srcs = ["main.cc"],
    deps = [
        ":petal_matrix",
        ":log",
        ":i2c",
        ":touch_wheel",
        "@pico-sdk//src/rp2_common/hardware_i2c",
        "@pico-sdk//src/rp2_common/pico_stdlib",
    ],
)
